CheshireParser.yy.output
Terminals unused in grammar

   TOK_ASSERT
   TOK_GLOBAL_VARIABLE
   TOK_CLASS
   TOK_INHERITS
   TOK_FOR
   TOK_RETURN
   TOK_BITSHIFT


Grammar

    0 $accept: input $end

    1 input: TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list TOK_LN
    2      | TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list block_or_pass

    3 parameter_list: TOK_LPAREN parameter_list_contains TOK_RPAREN
    4               | TOK_LPAREN TOK_RPAREN

    5 parameter_list_contains: typename TOK_IDENTIFIER
    6                        | typename TOK_IDENTIFIER TOK_COMMA parameter_list_contains

    7 block_or_pass: TOK_PASS
    8              | block

    9 statement: expression_statement TOK_LN
   10          | typename TOK_IDENTIFIER TOK_SET expression TOK_LN
   11          | block
   12          | TOK_IF TOK_LPAREN expression TOK_RPAREN statement_or_pass TOK_ELSE statement_or_pass
   13          | TOK_IF TOK_LPAREN expression TOK_RPAREN statement_or_pass
   14          | TOK_WHILE TOK_LPAREN expression TOK_RPAREN statement_or_pass

   15 statement_or_pass: TOK_PASS
   16                  | statement

   17 block: TOK_LBRACE block_contains

   18 block_contains: statement block
   19               | TOK_RBRACE

   20 expression: expression_statement
   21           | TOK_RESERVED_LITERAL
   22           | TOK_STRING
   23           | TOK_LPAREN expression TOK_RPAREN
   24           | expression TOK_LBRACKET expression TOK_RBRACKET
   25           | TOK_IDENTIFIER
   26           | TOK_NUMBER
   27           | TOK_SELF
   28           | TOK_NOT expression
   29           | TOK_SIZEOF expression
   30           | TOK_SIZEOF TOK_LSQUARE typename TOK_RSQUARE
   31           | TOK_ADDSUB expression
   32           | expression TOK_COMPARE expression
   33           | expression TOK_LSQUARE expression
   34           | expression TOK_RSQUARE expression
   35           | expression TOK_AND_OR expression
   36           | expression TOK_ADDSUB expression
   37           | expression TOK_MULTDIV expression
   38           | expression TOK_INSTANCEOF typename
   39           | TOK_CAST TOK_LSQUARE typename TOK_RSQUARE expression
   40           | TOK_NEW TOK_IDENTIFIER expression_list
   41           | TOK_NEW_HEAP TOK_IDENTIFIER expression_list

   42 expression_statement: expression TOK_SET expression
   43                     | expression TOK_INCREMENT
   44                     | TOK_INCREMENT expression
   45                     | TOK_IDENTIFIER expression_list
   46                     | expression TOK_ACCESSOR TOK_IDENTIFIER
   47                     | expression TOK_ACCESSOR TOK_IDENTIFIER expression_list
   48                     | expression TOK_ACCESSOR expression_list

   49 expression_list: TOK_LPAREN expression_list_contains TOK_RPAREN
   50                | TOK_LPAREN TOK_RPAREN

   51 expression_list_contains: expression
   52                         | expression TOK_COMMA expression_list_contains

   53 typename: TOK_IDENTIFIER
   54         | TOK_IDENTIFIER TOK_HAT
   55         | TOK_RESERVED_TYPE
   56         | TOK_RESERVED_TYPE TOK_HAT
   57         | typename TOK_LAMBDA_PARAMS parameter_list


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_ASSERT (258)
TOK_GLOBAL_VARIABLE (259)
TOK_CLASS (260)
TOK_INHERITS (261)
TOK_DEFINE_FUNCTION (262) 1 2
TOK_IF (263) 12 13
TOK_ELSE (264) 12
TOK_FOR (265)
TOK_RETURN (266)
TOK_SELF (267) 27
TOK_WHILE (268) 14
TOK_LPAREN (269) 3 4 12 13 14 23 49 50
TOK_RPAREN (270) 3 4 12 13 14 23 49 50
TOK_LBRACE (271) 17
TOK_RBRACE (272) 19
TOK_LBRACKET (273) 24
TOK_RBRACKET (274) 24
TOK_LSQUARE (275) 30 33 39
TOK_RSQUARE (276) 30 34 39
TOK_COMMA (277) 6 52
TOK_HAT (278) 54 56
TOK_PASS (279) 7 15
TOK_LAMBDA_PARAMS (280) 57
TOK_ACCESSOR (281) 46 47 48
TOK_SIZEOF (282) 29 30
TOK_SET (283) 10 42
TOK_INSTANCEOF (284) 38
TOK_NEW (285) 40
TOK_NEW_HEAP (286) 41
TOK_CAST (287) 39
TOK_LN (288) 1 9 10
TOK_NOT (289) 28
TOK_INCREMENT (290) 43 44
TOK_COMPARE (291) 32
TOK_AND_OR (292) 35
TOK_ADDSUB (293) 31 36
TOK_MULTDIV (294) 37
TOK_NUMBER (295) 26
TOK_RESERVED_TYPE (296) 55 56
TOK_RESERVED_LITERAL (297) 21
TOK_IDENTIFIER (298) 1 2 5 6 10 25 40 41 45 46 47 53 54
TOK_STRING (299) 22
TOK_BITSHIFT (300)
P_UMINUS (301)
P_CAST (302)
P_IF (303)
P_IFELSE (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
input (51)
    on left: 1 2, on right: 0
parameter_list (52)
    on left: 3 4, on right: 1 2 57
parameter_list_contains (53)
    on left: 5 6, on right: 3 6
block_or_pass (54)
    on left: 7 8, on right: 2
statement (55)
    on left: 9 10 11 12 13 14, on right: 16 18
statement_or_pass (56)
    on left: 15 16, on right: 12 13 14
block (57)
    on left: 17, on right: 8 11 18
block_contains (58)
    on left: 18 19, on right: 17
expression (59)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41, on right: 10 12 13 14 23 24 28 29 31 32 33 34 35 36
    37 38 39 42 43 44 46 47 48 51 52
expression_statement (60)
    on left: 42 43 44 45 46 47 48, on right: 9 20
expression_list (61)
    on left: 49 50, on right: 40 41 45 47 48
expression_list_contains (62)
    on left: 51 52, on right: 49 52
typename (63)
    on left: 53 54 55 56 57, on right: 1 2 5 6 10 30 38 39 57


state 0

    0 $accept: . input $end
    1 input: . TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list TOK_LN
    2      | . TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list block_or_pass

    TOK_DEFINE_FUNCTION  shift, and go to state 1

    input  go to state 2


state 1

    1 input: TOK_DEFINE_FUNCTION . typename TOK_IDENTIFIER parameter_list TOK_LN
    2      | TOK_DEFINE_FUNCTION . typename TOK_IDENTIFIER parameter_list block_or_pass
   53 typename: . TOK_IDENTIFIER
   54         | . TOK_IDENTIFIER TOK_HAT
   55         | . TOK_RESERVED_TYPE
   56         | . TOK_RESERVED_TYPE TOK_HAT
   57         | . typename TOK_LAMBDA_PARAMS parameter_list

    TOK_RESERVED_TYPE  shift, and go to state 3
    TOK_IDENTIFIER     shift, and go to state 4

    typename  go to state 5


state 2

    0 $accept: input . $end

    $end  shift, and go to state 6


state 3

   55 typename: TOK_RESERVED_TYPE .  [TOK_RPAREN, TOK_LBRACKET, TOK_RBRACKET, TOK_LSQUARE, TOK_RSQUARE, TOK_COMMA, TOK_LAMBDA_PARAMS, TOK_ACCESSOR, TOK_SET, TOK_INSTANCEOF, TOK_LN, TOK_INCREMENT, TOK_COMPARE, TOK_AND_OR, TOK_ADDSUB, TOK_MULTDIV, TOK_IDENTIFIER]
   56         | TOK_RESERVED_TYPE . TOK_HAT

    TOK_HAT  shift, and go to state 7

    $default  reduce using rule 55 (typename)


state 4

   53 typename: TOK_IDENTIFIER .  [TOK_RPAREN, TOK_LBRACKET, TOK_RBRACKET, TOK_LSQUARE, TOK_RSQUARE, TOK_COMMA, TOK_LAMBDA_PARAMS, TOK_ACCESSOR, TOK_SET, TOK_INSTANCEOF, TOK_LN, TOK_INCREMENT, TOK_COMPARE, TOK_AND_OR, TOK_ADDSUB, TOK_MULTDIV, TOK_IDENTIFIER]
   54         | TOK_IDENTIFIER . TOK_HAT

    TOK_HAT  shift, and go to state 8

    $default  reduce using rule 53 (typename)


state 5

    1 input: TOK_DEFINE_FUNCTION typename . TOK_IDENTIFIER parameter_list TOK_LN
    2      | TOK_DEFINE_FUNCTION typename . TOK_IDENTIFIER parameter_list block_or_pass
   57 typename: typename . TOK_LAMBDA_PARAMS parameter_list

    TOK_LAMBDA_PARAMS  shift, and go to state 9
    TOK_IDENTIFIER     shift, and go to state 10


state 6

    0 $accept: input $end .

    $default  accept


state 7

   56 typename: TOK_RESERVED_TYPE TOK_HAT .

    $default  reduce using rule 56 (typename)


state 8

   54 typename: TOK_IDENTIFIER TOK_HAT .

    $default  reduce using rule 54 (typename)


state 9

    3 parameter_list: . TOK_LPAREN parameter_list_contains TOK_RPAREN
    4               | . TOK_LPAREN TOK_RPAREN
   57 typename: typename TOK_LAMBDA_PARAMS . parameter_list

    TOK_LPAREN  shift, and go to state 11

    parameter_list  go to state 12


state 10

    1 input: TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER . parameter_list TOK_LN
    2      | TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER . parameter_list block_or_pass
    3 parameter_list: . TOK_LPAREN parameter_list_contains TOK_RPAREN
    4               | . TOK_LPAREN TOK_RPAREN

    TOK_LPAREN  shift, and go to state 11

    parameter_list  go to state 13


state 11

    3 parameter_list: TOK_LPAREN . parameter_list_contains TOK_RPAREN
    4               | TOK_LPAREN . TOK_RPAREN
    5 parameter_list_contains: . typename TOK_IDENTIFIER
    6                        | . typename TOK_IDENTIFIER TOK_COMMA parameter_list_contains
   53 typename: . TOK_IDENTIFIER
   54         | . TOK_IDENTIFIER TOK_HAT
   55         | . TOK_RESERVED_TYPE
   56         | . TOK_RESERVED_TYPE TOK_HAT
   57         | . typename TOK_LAMBDA_PARAMS parameter_list

    TOK_RPAREN         shift, and go to state 14
    TOK_RESERVED_TYPE  shift, and go to state 3
    TOK_IDENTIFIER     shift, and go to state 4

    parameter_list_contains  go to state 15
    typename                 go to state 16


state 12

   57 typename: typename TOK_LAMBDA_PARAMS parameter_list .

    $default  reduce using rule 57 (typename)


state 13

    1 input: TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list . TOK_LN
    2      | TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list . block_or_pass
    7 block_or_pass: . TOK_PASS
    8              | . block
   17 block: . TOK_LBRACE block_contains

    TOK_LBRACE  shift, and go to state 17
    TOK_PASS    shift, and go to state 18
    TOK_LN      shift, and go to state 19

    block_or_pass  go to state 20
    block          go to state 21


state 14

    4 parameter_list: TOK_LPAREN TOK_RPAREN .

    $default  reduce using rule 4 (parameter_list)


state 15

    3 parameter_list: TOK_LPAREN parameter_list_contains . TOK_RPAREN

    TOK_RPAREN  shift, and go to state 22


state 16

    5 parameter_list_contains: typename . TOK_IDENTIFIER
    6                        | typename . TOK_IDENTIFIER TOK_COMMA parameter_list_contains
   57 typename: typename . TOK_LAMBDA_PARAMS parameter_list

    TOK_LAMBDA_PARAMS  shift, and go to state 9
    TOK_IDENTIFIER     shift, and go to state 23


state 17

    9 statement: . expression_statement TOK_LN
   10          | . typename TOK_IDENTIFIER TOK_SET expression TOK_LN
   11          | . block
   12          | . TOK_IF TOK_LPAREN expression TOK_RPAREN statement_or_pass TOK_ELSE statement_or_pass
   13          | . TOK_IF TOK_LPAREN expression TOK_RPAREN statement_or_pass
   14          | . TOK_WHILE TOK_LPAREN expression TOK_RPAREN statement_or_pass
   17 block: . TOK_LBRACE block_contains
   17      | TOK_LBRACE . block_contains
   18 block_contains: . statement block
   19               | . TOK_RBRACE
   20 expression: . expression_statement
   21           | . TOK_RESERVED_LITERAL
   22           | . TOK_STRING
   23           | . TOK_LPAREN expression TOK_RPAREN
   24           | . expression TOK_LBRACKET expression TOK_RBRACKET
   25           | . TOK_IDENTIFIER
   26           | . TOK_NUMBER
   27           | . TOK_SELF
   28           | . TOK_NOT expression
   29           | . TOK_SIZEOF expression
   30           | . TOK_SIZEOF TOK_LSQUARE typename TOK_RSQUARE
   31           | . TOK_ADDSUB expression
   32           | . expression TOK_COMPARE expression
   33           | . expression TOK_LSQUARE expression
   34           | . expression TOK_RSQUARE expression
   35           | . expression TOK_AND_OR expression
   36           | . expression TOK_ADDSUB expression
   37           | . expression TOK_MULTDIV expression
   38           | . expression TOK_INSTANCEOF typename
   39           | . TOK_CAST TOK_LSQUARE typename TOK_RSQUARE expression
   40           | . TOK_NEW TOK_IDENTIFIER expression_list
   41           | . TOK_NEW_HEAP TOK_IDENTIFIER expression_list
   42 expression_statement: . expression TOK_SET expression
   43                     | . expression TOK_INCREMENT
   44                     | . TOK_INCREMENT expression
   45                     | . TOK_IDENTIFIER expression_list
   46                     | . expression TOK_ACCESSOR TOK_IDENTIFIER
   47                     | . expression TOK_ACCESSOR TOK_IDENTIFIER expression_list
   48                     | . expression TOK_ACCESSOR expression_list
   53 typename: . TOK_IDENTIFIER
   54         | . TOK_IDENTIFIER TOK_HAT
   55         | . TOK_RESERVED_TYPE
   56         | . TOK_RESERVED_TYPE TOK_HAT
   57         | . typename TOK_LAMBDA_PARAMS parameter_list

    TOK_IF                shift, and go to state 24
    TOK_SELF              shift, and go to state 25
    TOK_WHILE             shift, and go to state 26
    TOK_LPAREN            shift, and go to state 27
    TOK_LBRACE            shift, and go to state 17
    TOK_RBRACE            shift, and go to state 28
    TOK_SIZEOF            shift, and go to state 29
    TOK_NEW               shift, and go to state 30
    TOK_NEW_HEAP          shift, and go to state 31
    TOK_CAST              shift, and go to state 32
    TOK_NOT               shift, and go to state 33
    TOK_INCREMENT         shift, and go to state 34
    TOK_ADDSUB            shift, and go to state 35
    TOK_NUMBER            shift, and go to state 36
    TOK_RESERVED_TYPE     shift, and go to state 3
    TOK_RESERVED_LITERAL  shift, and go to state 37
    TOK_IDENTIFIER        shift, and go to state 38
    TOK_STRING            shift, and go to state 39

    statement             go to state 40
    block                 go to state 41
    block_contains        go to state 42
    expression            go to state 43
    expression_statement  go to state 44
    typename              go to state 45


state 18

    7 block_or_pass: TOK_PASS .

    $default  reduce using rule 7 (block_or_pass)


state 19

    1 input: TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list TOK_LN .

    $default  reduce using rule 1 (input)


state 20

    2 input: TOK_DEFINE_FUNCTION typename TOK_IDENTIFIER parameter_list block_or_pass .

    $default  reduce using rule 2 (input)


state 21

    8 block_or_pass: block .

    $default  reduce using rule 8 (block_or_pass)


state 22

    3 parameter_list: TOK_LPAREN parameter_list_contains TOK_RPAREN .

    $default  reduce using rule 3 (parameter_list)


state 23

    5 parameter_list_contains: typename TOK_IDENTIFIER .  [TOK_RPAREN]
    6                        | typename TOK_IDENTIFIER . TOK_COMMA parameter_list_contains

    TOK_COMMA  shift, and go to state 46

    $default  reduce using rule 5 (parameter_list_contains)


state 24

   12 statement: TOK_IF . TOK_LPAREN expression TOK_RPAREN statement_or_pass TOK_ELSE statement_or_pass
   13          | TOK_IF . TOK_LPAREN expression TOK_RPAREN statement_or_pass

    TOK_LPAREN  shift, and go to state 47


state 25

   27 expression: TOK_SELF .

    $default  reduce using rule 27 (expression)


state 26

   14 statement: TOK_WHILE . TOK_LPAREN expression TOK_RPAREN statement_or_pass

    TOK_LPAREN  shift, and go to state 48


state 27

   20 expression: . expression_statement
   21           | . TOK_RESERVED_LITERAL
   22           | . TOK_STRING
   23           | . TOK_LPAREN expression TOK_RPAREN
   23           | TOK_LPAREN . expression TOK_RPAREN
   24           | . expression TOK_LBRACKET expression TOK_RBRACKET
   25           | . TOK_IDENTIFIER
   26           | . TOK_NUMBER
   27           | . TOK_SELF
   28           | . TOK_NOT expression
   29           | . TOK_SIZEOF expression
   30           | . TOK_SIZEOF TOK_LSQUARE typename TOK_RSQUARE
   31           | . TOK_ADDSUB expression
   32           | . expression TOK_COMPARE expression
   33           | . expression TOK_LSQUARE expression
   34           | . expression TOK_RSQUARE expression
   35           | . expression TOK_AND_OR expression
   36           | . expression TOK_ADDSUB expression
   37           | . expression TOK_MULTDIV expression
   38           | . expression TOK_INSTANCEOF typename
   39           | . TOK_CAST TOK_LSQUARE typename TOK_RSQUARE expression
   40           | . TOK_NEW TOK_IDENTIFIER expression_list
   41           | . TOK_NEW_HEAP TOK_IDENTIFIER expression_list
   42 expression_statement: . expression TOK_SET expression
   43                     | . expression TOK_INCREMENT
   44                     | . TOK_INCREMENT expression
   45                     | . TOK_IDENTIFIER expression_list
   46                     | . expression TOK_ACCESSOR TOK_IDENTIFIER
   47                     | . expression TOK_ACCESSOR TOK_IDENTIFIER expression_list
   48                     | . expression TOK_ACCESSOR expression_list

    TOK_SELF              shift, and go to state 25
    TOK_LPAREN            shift, and go to state 27
    TOK_SIZEOF            shift, and go to state 29
    TOK_NEW               shift, and go to state 30
    TOK_NEW_HEAP          shift, and go to state 31
    TOK_CAST              shift, and go to state 32
    TOK_NOT               shift, and go to state 33
    TOK_INCREMENT         shift, and go to state 34
    TOK_ADDSUB            shift, and go to state 35
    TOK_NUMBER            shift, and go to state 36
    TOK_RESERVED_LITERAL  shift, and go to state 37
    TOK_IDENTIFIER        shift, and go to state 49
    TOK_STRING            shift, and go to state 39

    expression            go to state 50
    expression_statement  go to state 51


state 28

   19 block_contains: TOK_RBRACE .

    $default  reduce using rule 19 (block_contains)


state 29

   20 expression: . expression_statement
   21           | . TOK_RESERVED_LITERAL
   22           | . TOK_STRING
   23           | . TOK_LPAREN expression TOK_RPAREN
   24           | . expression TOK_LBRACKET expression TOK_RBRACKET
   25           | . TOK_IDENTIFIER
   26           | . TOK_NUMBER
   27           | . TOK_SELF
   28           | . TOK_NOT expression
   29           | . TOK_SIZEOF expression
   29           | TOK_SIZEOF . expression
   30           | . TOK_SIZEOF TOK_LSQUARE typename TOK_RSQUARE
   30           | TOK_SIZEOF . TOK_LSQUARE typename TOK_RSQUARE
   31           | . TOK_ADDSUB expression
   32           | . expression TOK_COMPARE expression
   33           | . expression TOK_LSQUARE expression
   34           | . expression TOK_RSQUARE expression
   35           | . expression TOK_AND_OR expression
   36           | . expression TOK_ADDSUB expression
   37           | . expression TOK_MULTDIV expression
   38           | . expression TOK_INSTANCEOF typename
   39           | . TOK_CAST TOK_LSQUARE typename TOK_RSQUARE expression
   40           | . TOK_NEW TOK_IDENTIFIER expression_list
   41           | . TOK_NEW_HEAP TOK_IDENTIFIER expression_list
   42 expression_statement: . expression TOK_SET expression
   43                     | . expression TOK_INCREMENT
   44                     | . TOK_INCREMENT expression
   45                     | . TOK_IDENTIFIER expression_list
   46                     | . expression TOK_ACCESSOR TOK_IDENTIFIER
   47                     | . expression TOK_ACCESSOR TOK_IDENTIFIER expression_list
   48                     | . expression TOK_ACCESSOR expression_list

    TOK_SELF              shift, and go to state 25
    TOK_LPAREN            shift, and go to state 27
    TOK_LSQUARE           shift, and go to state 52
    TOK_SIZEOF            shift, and go to state 29
    TOK_NEW               shift, and go to state 30
    TOK_NEW_HEAP          shift, and go to state 31
    TOK_CAST              shift, and go to state 32
    TOK_NOT               shift, and go to state 33
    TOK_INCREMENT         shift, and go to state 34
    TOK_ADDSUB            shift, and go to state 35
    TOK_NUMBER            shift, and go to state 36
    TOK_RESERVED_LITERAL  shift, and go to state 37
    TOK_IDENTIFIER        shift, and go to state 49
    TOK_STRING            shift, and go to state 39

    expression            go to state 53
    expression_statement  go to state 51


state 30

   40 expression: TOK_NEW . TOK_IDENTIFIER expression_list

    TOK_IDENTIFIER  shift, and go to state 54


state 31

   41 expression: TOK_NEW_HEAP . TOK_IDENTIFIER expression_list

    TOK_IDENTIFIER  shift, and go to state 55


state 32

   39 expression: TOK_CAST . TOK_LSQUARE typename TOK_RSQUARE expression

    TOK_LSQUARE  shift, and go to state 56


state 33
